# IDEAL-GENOM

./: .gitignore  Dockerfile  README.md  annotate_debug.py  brisbane_debug.py  pyproject.toml  readthedocs.yml  requirements.txt
docs/source/: Helpers.rst  annotations.rst  api_client.rst  conf.py  get_examples.rst  index.rst  power_comp.rst
ideal_genom/: Helpers.py  __main__.py  after_imputation.py  annotations.py  api_client.py  get_examples.py  get_references.py  gwas_fixed.py  manhattan_type.py  plots.py  power_comp.py  zoom_heatmap.py
ideal_genom/gwas/: gwas_fixed.py  gwas_glm.py  gwas_glmm.py  gwas_random.py
ideal_genom/preprocessing/: PostImputation.py  post_imputation.py  prep_ds.py  preparatory.py
ideal_genom/visualization/: manhattan_type.py  plots.py  zoom_heatmap.py
ideal_genome/: __main__.py  gwas_fixed.py  gwas_random.py  prep_ds.py
luxgiant_dstream/: __main__.py  annotate_tools.py  gwas.py  gwas_fixed.py  gwas_random.py  manhattan_type.py  plots.py  prep_ds.py
notebooks/: 00_post.ipynb  01_post_imput.ipynb  02_preparatory.ipynb  03_glm_assoc.ipynb  04_random_eff.ipynb  brisbane_debug.ipynb  brisbane_plot.ipynb  post_imput.ipynb  select_common.ipynb  test.ipynb  testPipe.ipynb  test_brisbane.ipynb  test_miami_plot.ipynb  translate.ipynb  trumpet.ipynb
source/: conf.py  index.rst  introduction.rst
tests/: test_zoom.ipynb
viz_notebooks/: beta_beta.ipynb  maf_plot.ipynb  manhattan.ipynb  manhattan2.ipynb  miami.ipynb  miami2.ipynb  qq_plot.ipynb  trumpet.ipynb  trumpet_binary.ipynb  trumpet_quantitative.ipynb  zoom1.ipynb
(+5 files in other folders)
